# Cyclaudes

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: tests.yml
hooks/: bootstrap.py  flag_ui_change.py  hooks.json  stop_gate.py
planning/: PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PLAN_MAIN.md  REACT_ROBUSTNESS.md  TODO.md
related-work/: accessibility-tree-agent-tooling.md
skills/verify-ui/: SKILL.md
src/cyclaudes/: __init__.py  abstain.py  ancestry.py  pytest_plugin.py  pytest_ui.py  ui.py  verify_result.py  vision.py  windowing.py
tests/: TESTS_MAIN.md  conftest.py  test_abstain.py  test_abstain_outcome.py  test_acceptance_phase2.py  test_acceptance_phase3.py  test_acceptance_phase4.py  test_app_session.py  test_bootstrap.py  test_fixtures.py  test_flag_ui_change.py  test_mspaint_live.py  test_notepad_live.py  test_stop_gate.py  test_success_criterion_2.py  test_success_criterion_3.py  test_ui.py  test_verify_result.py  test_vision.py  test_windowing.py
