[project]
name = "cyclaudes"
version = "0.1.0"
description = "Structural UI verification so an agent can check its own work without a human"
requires-python = ">=3.10"
dependencies = ["touchpoint-py>=0.3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Registers the abstention outcome automatically — installing cyclaudes is the
# only wiring needed. See src/cyclaudes/pytest_plugin.py.
[project.entry-points.pytest11]
cyclaudes = "cyclaudes.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyclaudes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
