[project]
name = "cyclaudes"
version = "0.1.0"
description = "Structural UI verification so an agent can check its own work without a human"
requires-python = ">=3.10"
dependencies = ["touchpoint-py>=0.3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Registers the abstention outcome and the `window` fixture automatically —
# installing cyclaudes is the only wiring needed. See pytest_plugin.py
# (outcome) and pytest_ui.py (fixture).
[project.entry-points.pytest11]
cyclaudes = "cyclaudes.pytest_plugin"
cyclaudes_ui = "cyclaudes.pytest_ui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyclaudes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Live checks drive a real desktop; deselected by default so CI stays
# deterministic. Run `pytest -m live` (with an app open) to include them.
addopts = '-m "not live"'
markers = [
    "live: needs a real desktop/GUI; deselected by default",
]
